<resources>
    <string name="app_name">GDPR Application</string>
    <string name="log_in">Log In</string>
    <string name="slogan">Because your company cares.</string>
    <string name="error_connection">ERROR - Connection Error!</string>
    <string name="check_connection">Check your connection!</string>
    <string name="OK">OK</string>
    <string name="sign_in_error">Sign in error - please try again!</string>
    <string name="cancelled_sign_in">Sign in cancelled.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="language">Language</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="medical_history">Medical Conditions</string>
    <string name="work_place">Place of work.</string>
    <string name="register">Register Here!</string>
    <string name="enter_your_name">Full name</string>
    <string name="address">Address</string>
    <string name="register_securely_today">Register Securely Today!</string>
    <string name="logo_for_gdpr">logo for GDPR</string>
    <string name="copyright_sign">copyright sign</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="visit_our_website">Visit our Website</string>
    <string name="click_for_help">Click for Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_background">contact us background</string>
    <string name="gdprinfo_outlook_co_uk">GDPRinfo@outlook.co.uk</string>
    <string name="gdpr_application_sheffield">GDPR Application Sheffield</string>
    <string name="gdprappssheff">GDPRAPPSSHEFF</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_your_account_today">Register your account today!</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_your_new_email">Enter your new Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="change_email">Change Email</string>
    <string name="update_data">Update Data</string>
    <string name="reset">Reset</string>
    <string name="please_enter_your_email_address">Please enter your email address :</string>
    <string name="faqs">FAQs</string>
    <string name="about_gdpr">About GDPR</string>
    <string name="why_have_i_been_asked_to_get_this_app">Why have I been asked to get this app?</string>
    <string name="change_password">Change Password</string>
    <string name="update_profile_data">Update Profile Data</string>
    <string name="_07527433503">07527433503</string>
    <string name="work_hours">Work Hours per week</string>
    <string name="information">Information</string>
    <string name="request_data">Request Data</string>
    <string name="hows_my_data_being_used">Hows my data being used?</string>

    <string name="about_gdpr_text">Europe is now covered by the world\'s strongest data protection rules.         The mutually agreed General Data Protection Regulation \\(GDPR\\) came into force on May 25, 2018,         and was designed to modernise laws that protect the personal information of individuals. The EU\'s GDPR website says the         legislation is designed to \"harmonise\" data privacy laws across Europe as well as give greater protection and rights to         individuals.</string>
    <string name="gdpr_employee_text">Under the GDPR, employees as data subjects will have greater rights.         The good news for UK employers is that many of these rights are similar to those under the current         UK Data Protection Act 1998 \\(DPA\\). The bad news is that, as a general rule, the GDPR expands the rights         under the DPA, introduces a few new rights, and imposes significant penalties for breaches. In summary,         under the GDPR, employees as data subjects have the following rights\\: the right to be informed, which encompasses         the obligation on employers to provide transparency as to how personal data will be used; the right of access,         similar to those rights under the DPA and encompassing the ever-popular subject access request; the right to         rectification of data that is inaccurate or incomplete \\(again similar to the DPA\\)\\; the right to be forgotten under         certain circumstances; the right to block or suppress processing of personal data \\(similar to the DPA\\)\\; and the new         right to data portability which allows employees to obtain and reuse their personal data for their own purposes across         different services under certain circumstances.</string>
    <string name="what_is_gdpr">What is GDPR?</string>
    <string name="gdpr_and_employee_data">GDPR and Employee Data</string>
    <string name="graphic_image_for_about_gdpr_page">Graphic image for about gdpr page</string>
    <string name="why_title">Why have I been asked to download this app?</string>
    <string name="faq_about_cd">Box of data to represent faqs page</string>
    <string name="why_img_cd">Image of question mark held by lady</string>
    <string name="welcome">Welcome,</string>
    <string name="why_gdpr_text">The GDPR (General Data Protection Regulation) came into force on 25 May 2018. The regulation replaced the current Data Protection Act. Both employers and their employees have new responsibilities to consider to help ensure compliance. After Britain leaves the European Union, a new UK Data Protection Act will ensure that the GDPR principles remain in UK law. Organisations must have a valid reason for having personal data and the data should not be held for any longer than necessary. This is the company you work fors chosen route in helping them not only comply with the regulations but to help keep your personal data safe and make sure you as an employee have all the information you need on the go.</string>
    <string name="can_t_see_your_question_click_here_to_contact_us">Can\'t see your question? Click here to contact us.</string>
    <string name="ask">Ask us anything!</string>
    <string name="kept_string">How long is my data kept for?</string>
    <string name="del_req_string">How do I request to delete my data?</string>
    <string name="tech_string">I\'m having a technical issue, where can I go?</string>
    <string name="update_string">Where can I update my data?</string>
    <string name="request_to_delete_data">Request to delete data</string>
    <string name="admin_home_page">Admin Home Page</string>
    <string name="data_string_how">Data protection inc. use your personal data for the sole purpose of being able to contact you only. The data is not shared with any other parties and will not be sold to any other company. If any of this changes employees will be first notified prior to the changes.</string>
    <string name="firebase_why_string">Your data is stored on a secure server based in the control room at Data inc. The data stored on this application is stored on a protected GDPR complient databse called Firebase. Admin Abbie Turner from Data inc is the only person with access to this database. For more information of Firebase please click the logo below.</string>
    <string name="list_of_employees">List of Employees</string>
    <string name="admin_home_page_string" translatable="false">ADMIN HOME PAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="contact_employee">Contact Employee</string>
    <string name="send_notification_to_update_data">Send Notification To Update Data</string>
    <string name="log_out">Log Out</string>
    <string name="gdpr_application_icon_cd">GDPR Application Icon</string>
    <string name="phone_icon_cd">Phone Icon</string>
    <string name="person_placeholder_cd">Person Placeholder for photo</string>
    <string name="firebase_logo_cd">Firebase Logo</string>
    <string name="profile_picture_Cd">Profile Picture</string>
    <string name="edit_icon_cd">Edit Icon</string>
    <string name="email_icon_cd">Email Icon</string>
    <string name="facebook_logo_cd">Facebook Logo</string>
    <string name="twitter_logo_cd">Twitter Logo</string>
    <string name="name">Name :</string>
    <string name="number">Number :</string>
    <string name="where_can_i_request_my_data">Where can I request my Data?</string>
    <string name="reg_">Register</string>
    <string name="employees">Employees</string>
    <string name="requests">Requests</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>
