<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".UI.Fragments.InfoFragment">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:src="@drawable/infopic" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/twentyeight_TS"
            android:text="@string/information"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/big_noodle"
            android:paddingBottom="@dimen/twentyfive_dp"
            android:textColor="@color/colorPrimaryDark"/>


        <Button
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_gdpr"
            android:fontFamily="@font/big_noodle"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="248dp" />


        <Button
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faqs"
            tools:layout_editor_absoluteX="122dp"
            android:fontFamily="@font/big_noodle"
            tools:layout_editor_absoluteY="309dp" />

        <Button
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/big_noodle"
            android:text="@string/why_have_i_been_asked_to_get_this_app"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="374dp" />

        <Button
            style="@android:style/Widget.DeviceDefault.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/big_noodle"
            android:text="@string/contact_us"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="374dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>